include( ../PyQt4Macros.cmake )

if (WIN32)
	set( HOME $ENV{USERPROFILE} )
else (WIN32)
	set ( HOME $ENV{HOME} )
endif(WIN32)

SET(QGIS_DATA_DIR ${HOME}/.qgis2/)
SET(QGIS_PLUGIN_DIR "${QGIS_DATA_DIR}/python/plugins/intralys" )

FILE(GLOB INSTALLER_FILES metadata.txt *.py)
FILE(GLOB IMAGES_FILES *.png)
SET(INSTALLER_FILES ${INSTALLER_FILES} ${IMAGES_FILES} )

FILE(GLOB UI_FILES *.ui)
PYQT4_WRAP_UI(PYUI_FILES ${UI_FILES})
PYQT4_ADD_RESOURCES(PYRC_FILES resources.qrc)
ADD_CUSTOM_TARGET(intralys ALL DEPENDS ${PYUI_FILES} ${PYRC_FILES} )

SET(INSTALLER_FILES ${INSTALLER_FILES} ${PYUI_FILES} ${PYRC_FILES})

INSTALL(FILES ${INSTALLER_FILES} DESTINATION python/plugins/intralys)
